--- a/exam_questions.tex
+++ b/exam_questions.tex
@@ -60,7 +60,7 @@
 \input{exam_questions/eq-2.tex}
 % \newpage
 \input{exam_questions/eq-3.tex}
-% \newpage
+\newpage
 \input{exam_questions/eq-4.tex}
 % \newpage
 \input{exam_questions/eq-5.tex}
@@ -78,7 +78,7 @@
 \input{exam_questions/eq-11.tex}
 % \newpage
 \input{exam_questions/eq-12.tex}
-% \newpage
+\newpage
 \input{exam_questions/eq-13.tex}
 % \newpage
 \input{exam_questions/eq-14.tex}
@@ -96,7 +96,7 @@
 \input{exam_questions/eq-20.tex}
 % \newpage
 \input{exam_questions/eq-21.tex}
-% \newpage
+\newpage
 \input{exam_questions/eq-22.tex}
 % \newpage
 \input{exam_questions/eq-23.tex}
