--- a/exam_questions/eq-11.tex
+++ b/exam_questions/eq-11.tex
@@ -1,5 +1,38 @@
 \subsection*{Вопрос 11}
 
 \begin{condition}
-Распределение времени пребывания в одном состоянии в цепи Маркова с непрерывным временем. Марковское свойство показательного распределения.
+	Распределение времени пребывания в одном состоянии в цепи Маркова с непрерывным временем. Марковское свойство показательного распределения.
 \end{condition}
+
+Пусть $T(i)$ — время пребывания марковского процесса $X(t)$
+в состоянии $i$. Тогда
+$
+	P(T(i)>t)
+	=
+	\lim_{n\to\infty}\bigl[p_{ii}(t/n)\bigr]^n.
+$
+
+Но
+$
+	p_{ii}(t/n)=1+\lambda_{ii}\frac{t}{n}+o\!\left(\frac{t}{n}\right).
+$
+Положим
+$
+	\lambda_i=-\lambda_{ii}=\sum_{j\ne i}\lambda_{ij}.
+$
+Тогда
+$
+	\lim_{n\to\infty}\bigl[p_{ii}(t/n)\bigr]^n
+	=
+	\lim_{n\to\infty}
+	\left(1-\lambda_i\frac{t}{n}+o\!\left(\frac{t}{n}\right)\right)^n
+	=
+	e^{-\lambda_i t}.
+$
+
+Следовательно,
+$
+	F_{T(i)}(t)=1-e^{-\lambda_i t},
+$
+то есть случайная величина $T(i)$ имеет показательное распределение
+с параметром $\lambda_i$.
