--- a/exam_questions/eq-12.tex
+++ b/exam_questions/eq-12.tex
@@ -1,5 +1,41 @@
 \subsection*{Вопрос 12}
 
 \begin{condition}
-Процессы рождения и гибели. Составление для них уравнений Колмогорова. Формулы для стационарных вероятностей.
+	Процессы рождения и гибели. Составление для них уравнений Колмогорова. Формулы для стационарных вероятностей.
 \end{condition}
+
+\textbf{Система дифференциальных уравнений Колмогорова.}
+
+$
+	\begin{cases}
+		p_0'(t) = -\lambda_0\,p_0(t) + \mu_1\,p_1(t), \\[6pt]
+		p_k'(t) = \lambda_{k-1}\,p_{k-1}(t)
+		-(\lambda_k+\mu_k)\,p_k(t)
+		+\mu_{k+1}\,p_{k+1}(t),
+		\qquad 1\le k\le n,                           \\[6pt]
+		p_n'(t) = \lambda_{n-1}\,p_{n-1}(t) - \mu_n\,p_n(t).
+	\end{cases}
+$
+
+\medskip
+
+\textbf{Стационарные вероятности.}
+
+Стационарные вероятности состояний
+$z_0,z_1,z_2,\ldots,z_n$
+процесса рождения и гибели с конечным числом состояний
+удовлетворяют системе линейных алгебраических уравнений:
+$
+	\begin{cases}
+		0 = -\lambda_0 z_0 + \mu_1 z_1, \\[6pt]
+		0 = \lambda_{k-1} z_{k-1}
+		-(\lambda_k+\mu_k) z_k
+		+\mu_{k+1} z_{k+1},
+		\qquad 1\le k\le n,             \\[6pt]
+		0 = \lambda_{n-1} z_{n-1} - \mu_n z_n,
+	\end{cases}
+$
+а также условию нормировки
+$
+	\sum_{k=0}^{n} z_k = 1.
+$
