--- a/exam_questions/eq-13.tex
+++ b/exam_questions/eq-13.tex
@@ -1,5 +1,121 @@
 \subsection*{Вопрос 13}
 
 \begin{condition}
-Поток событий. Определение простейшего потока. Распределение времени между событиями в простейшем потоке, свойства этого распределения.
+	Поток событий. Определение простейшего потока. Распределение времени между событиями в простейшем потоке, свойства этого распределения.
 \end{condition}
+
+\textbf{Поток однородных событий.}
+
+\begin{enumerate}
+	\item
+	      Случайная последовательность
+	      $
+		      t_1 \le t_2 \le \ldots
+	      $
+	      — моменты наступления событий.
+
+	\item
+	      $
+		      \tau_k = t_k - t_{k-1}, \qquad k\ge 1,\quad t_0=0,
+	      $
+	      — интервалы между событиями.
+
+	\item
+	      $
+		      \{X(t),\ t\ge 0\}
+	      $
+	      — число событий на интервале $[0,t]$.
+\end{enumerate}
+
+\medskip
+
+\textbf{Простейший (пуассоновский) поток.}
+
+Поток $\{X(t)\}$ называется простейшим, если выполняются условия:
+\begin{enumerate}
+	\item
+	      Поток $\{X(t)\}$ эквивалентен для любого $s>0$ потоку
+	      $
+		      \{X(t+s)-X(s)\}
+	      $
+	      (\emph{стационарность}).
+
+	\item
+	      $\{X(t)\}$ — процесс с независимыми приращениями
+	      (\emph{отсутствие последействия}).
+
+	\item
+	      $
+		      P\bigl(X(t)\ge 2 \mid X(t)\ge 1\bigr)\xrightarrow[t\to 0]{}0
+	      $
+	      (\emph{ординарность}).
+\end{enumerate}
+
+\medskip
+
+Пусть
+$
+	\Pi=\{t_1,t_2,\ldots\}
+$
+— простейший поток заявок с интервалами
+$
+	\{\tau_k=t_k-t_{k-1},\ k\ge 1\}, \qquad t_0=0.
+$
+Обозначим функцию распределения
+$
+	F_{\tau_k}(t)=P(\tau_k\le t).
+$
+Тогда
+$
+	P(\tau_k>t)
+	=
+	P(t_k-t_{k-1}>t)
+	=
+	P\bigl(X(t_k,t_k+t]=0\bigr)
+	=
+	P(X(t)=0)
+	=
+	e^{-\lambda t},
+$
+следовательно,
+$
+	F_{\tau_k}(t)=1-e^{-\lambda t}.
+$
+
+Таким образом, все $\tau_k$ имеют одинаковое показательное распределение
+с параметром $\lambda$.
+
+\medskip
+
+Свойства показательного распределения:
+\begin{itemize}
+	\item
+	      $
+		      F_{\tau}(s+t \mid \tau>s)=F_{\tau}(t),
+	      $
+	      не зависит от $s$.
+
+	\item
+	      Если $\{\tau_k,\ k=1,\ldots,n\}$ имеют показательные распределения
+	      с параметрами $\lambda_1,\ldots,\lambda_n$, то
+	      $
+		      \tau=\min\{\tau_k,\ k=1,\ldots,n\}
+	      $
+	      имеет показательное распределение с параметром
+	      $
+		      \lambda=\lambda_1+\lambda_2+\ldots+\lambda_n.
+	      $
+
+	\item
+	      Если $\{\tau_k,\ k=1,\ldots,n\}$ имеют показательные распределения
+	      с параметрами $\lambda_1,\ldots,\lambda_n$,
+	      $
+		      \lambda=\lambda_1+\ldots+\lambda_n,
+		      \qquad
+		      \tau=\min\{\tau_k,\ k=1,\ldots,n\},
+	      $
+	      то
+	      $
+		      P(\tau=\tau_k \mid \tau=t)=\frac{\lambda_k}{\lambda}.
+	      $
+\end{itemize}
