--- a/exam_questions/eq-14.tex
+++ b/exam_questions/eq-14.tex
@@ -1,5 +1,43 @@
 \subsection*{Вопрос 14}
 
 \begin{condition}
-Процесс Пуассона. Составление уравнений Колмогорова и их решение.
+	Процесс Пуассона. Составление уравнений Колмогорова и их решение.
 \end{condition}
+
+Для пуассоновского потока событий случайный процесс
+$
+	\{X(t),\ t\ge 0\}
+$
+является марковским и называется \emph{процессом Пуассона}.
+
+\medskip
+
+\textbf{Граф процесса Пуассона:}
+$
+	0 \xrightarrow{\lambda} 1 \xrightarrow{\lambda} 2 \xrightarrow{\lambda} \ldots
+$
+
+\medskip
+
+\textbf{Система дифференциальных уравнений Колмогорова:}
+$
+	\begin{cases}
+		p_0'(t) = -\lambda\,p_0(t), \\[6pt]
+		p_k'(t) = \lambda\,p_{k-1}(t) - \lambda\,p_k(t), \qquad k\ge 1.
+	\end{cases}
+$
+
+\medskip
+
+Решение этой системы с начальными условиями
+$
+	p_0(0)=1,\qquad p_k(0)=0,\ k\ge 1,
+$
+имеет вид
+$
+	p_k(t)=P(X_t=k)=\frac{(\lambda t)^k}{k!}\,e^{-\lambda t},
+	\qquad k\ge 0.
+$
+
+Следовательно, случайная величина $X_t$ имеет распределение Пуассона
+с параметром $\lambda t$.
