--- a/exam_questions/eq-15.tex
+++ b/exam_questions/eq-15.tex
@@ -1,5 +1,80 @@
 \subsection*{Вопрос 15}
 
 \begin{condition}
-Комплексные случайные процессы, их характеристики. Примеры.
+	Комплексные случайные процессы, их характеристики. Примеры.
 \end{condition}
+
+\textbf{Математическое ожидание комплексного случайного процесса.}
+
+Пусть
+$
+	X_t = X_t^{(1)} + i X_t^{(2)}.
+$
+Математическое ожидание комплексного случайного процесса $X_t$ определяется как
+$
+	m_X(t)=\mathbb{E}X_t
+	=
+	\mathbb{E}X_t^{(1)} + i\,\mathbb{E}X_t^{(2)},
+	\qquad t\in T.
+$
+
+\medskip
+
+\textbf{Дисперсия комплексного случайного процесса.}
+
+Дисперсией комплексного случайного процесса $X_t$ называется
+$
+	D_X(t)=\mathbb{E}\,|X_t-m_X(t)|^2,
+	\qquad t\in T.
+$
+
+Обозначая
+$
+	X_t^{0}=X_t-m_X(t)
+$
+(центрированный случайный процесс), получаем
+$
+	D_X(t)=\mathbb{E}|X_t^{0}|^2
+	=
+	\mathbb{E}|X_t|^2-|m_X(t)|^2.
+$
+
+Действительно,
+$
+	\begin{aligned}
+		D_X(t)
+		 & =
+		\mathbb{E}\bigl[(X_t-m_X(t))(\overline{X_t-m_X(t)})\bigr] \\
+		 & =
+		\mathbb{E}|X_t|^2
+		-
+		m_X(t)\,\overline{m_X(t)}
+		-
+		\overline{m_X(t)}\,m_X(t)
+		+
+		|m_X(t)|^2                                                \\
+		 & =
+		\mathbb{E}|X_t|^2-|m_X(t)|^2.
+	\end{aligned}
+$
+
+\medskip
+
+\textbf{Корреляционная функция комплексного случайного процесса.}
+
+Корреляционная функция комплексного случайного процесса $X_t$ определяется как
+$
+	K_X(t,s)
+	=
+	\mathbb{E}\bigl[(X_t-m_X(t))(\overline{X_s-m_X(s)})\bigr],
+	\qquad t,s\in T.
+$
+
+Эквивалентно,
+$
+	K_X(t,s)
+	=
+	\mathbb{E}[X_t\overline{X_s}]
+	-
+	m_X(t)\,\overline{m_X(s)}.
+$
