--- a/exam_questions/eq-17.tex
+++ b/exam_questions/eq-17.tex
@@ -1,5 +1,44 @@
 \subsection*{Вопрос 17}
 
 \begin{condition}
-Каноническое разложение случайного процесса и его характеристики.
+	Каноническое разложение случайного процесса и его характеристики.
 \end{condition}
+
+\textbf{Каноническое разложение случайного процесса.}
+
+Случайный процесс $X_t$ допускает каноническое разложение, если
+$
+	X_t=\sum_{i=1}^{n} V_i\,\psi_i(t)+d(t),
+$
+где случайные величины $V_i$ удовлетворяют условиям
+$
+	\mathbb{E}V_i=0,\qquad D V_i<\infty,
+$
+$
+	\operatorname{cov}(V_i,V_j)=0,\quad i\ne j,
+$
+а функции $\psi_i(t)$ и $d(t)$ являются неслучайными.
+
+\medskip
+
+\textbf{Свойства канонического разложения.}
+
+\begin{enumerate}
+	\item
+	      Математическое ожидание процесса:
+	      $
+		      m_X(t)=d(t).
+	      $
+
+	\item
+	      Корреляционная функция:
+	      $
+		      K_X(t,s)=\sum_{i=1}^{n}\psi_i(t)\,\overline{\psi_i(s)}\,D V_i.
+	      $
+
+	\item
+	      Дисперсия процесса:
+	      $
+		      D_X(t)=\sum_{i=1}^{n}\lvert\psi_i(t)\rvert^2\,D V_i.
+	      $
+\end{enumerate}
