--- a/exam_questions/eq-18.tex
+++ b/exam_questions/eq-18.tex
@@ -1,5 +1,41 @@
 \subsection*{Вопрос 18}
 
 \begin{condition}
-Непрерывность случайного процесса в среднем квадратическом. Связь между непрерывностью математического ожидания и корреляционной функции.
+	Непрерывность случайного процесса в среднем квадратическом. Связь между непрерывностью математического ожидания и корреляционной функции.
 \end{condition}
+
+\textbf{Непрерывность в среднем квадратическом.}
+
+Случайный процесс $\{X_t,\ t\in[a,b]\}$ сходится к случайной величине $Y$
+при $t\to s$ \emph{в среднем квадратическом}
+$
+	\left(\lim_{t\to s} X_t = Y\right),
+$
+если
+$
+	\lim_{t\to s}\mathbb{E}\bigl|X_t-Y\bigr|^2=0.
+$
+
+\medskip
+
+Случайный процесс $\{X_t,\ t\in[a,b]\}$ называется
+\emph{непрерывным в среднем квадратическом}
+на отрезке $[a,b]$, если
+$
+	\lim_{t\to s} X_t = X_s
+$
+в среднем квадратическом для всех $s\in[a,b]$.
+
+\medskip
+
+\textbf{Критерий непрерывности в среднем квадратическом.}
+
+Случайный процесс $X_t$ непрерывен в среднем квадратическом
+на отрезке $[a,b]$ тогда и только тогда, когда выполняются условия:
+\begin{enumerate}
+	\item
+	      функция математического ожидания $m_X(t)$ непрерывна на $[a,b]$;
+	\item
+	      корреляционная функция $K_X(t,s)$ непрерывна при $t=s$
+	      для всех $t\in[a,b]$.
+\end{enumerate}
