--- a/exam_questions/eq-19.tex
+++ b/exam_questions/eq-19.tex
@@ -1,5 +1,58 @@
 \subsection*{Вопрос 19}
 
 \begin{condition}
-Дифференцируемость случайного процесса в среднем квадратическом. Математическое ожидание и корреляционная функция производной.
+	Дифференцируемость случайного процесса в среднем квадратическом. Математическое ожидание и корреляционная функция производной.
 \end{condition}
+
+\textbf{Дифференцируемость в среднем квадратическом.}
+
+Случайный процесс $X_t$ называется \emph{дифференцируемым в среднем квадратическом}
+на отрезке $[a,b]$, если для всех $t\in[a,b]$ существует предел
+$
+	\lim_{\Delta t\to 0}
+	\frac{X_{t+\Delta t}-X_t}{\Delta t}
+	=
+	\frac{dX_t}{dt}
+$
+в среднем квадратическом.
+
+Случайный процесс
+$
+	Y_t=\frac{dX_t}{dt}
+$
+называется \emph{производной в среднем квадратическом}
+случайного процесса $X_t$.
+
+\medskip
+
+\textbf{Критерий дифференцируемости в среднем квадратическом.}
+
+Случайный процесс $X_t$ дифференцируем в среднем квадратическом
+на отрезке $[a,b]$ тогда и только тогда, когда выполняются условия:
+\begin{enumerate}
+	\item
+	      функция математического ожидания $m_X(t)$ дифференцируема на $[a,b]$;
+	\item
+	      существует смешанная производная
+	      $
+		      \frac{\partial^2 K_X(t,s)}{\partial t\,\partial s}
+	      $
+	      при $t=s$ для всех $t\in[a,b]$.
+\end{enumerate}
+
+\medskip
+
+При этом для процесса
+$
+	Y_t=\frac{dX_t}{dt}
+$
+выполняются соотношения:
+$
+	m_Y(t)=m_X'(t), \qquad \forall\,t\in[a,b],
+$
+$
+	K_Y(t,s)
+	=
+	\frac{\partial^2 K_X(t,s)}{\partial t\,\partial s},
+	\qquad \forall\, t,s\in(a,b).
+$
