--- a/exam_questions/eq-20.tex
+++ b/exam_questions/eq-20.tex
@@ -1,5 +1,54 @@
 \subsection*{Вопрос 20}
 
 \begin{condition}
-Интегрируемость случайного процесса на отрезке в среднем квадратическом. Математическое ожидание и корреляционная функция интеграла.
+	Интегрируемость случайного процесса на отрезке в среднем квадратическом. Математическое ожидание и корреляционная функция интеграла.
 \end{condition}
+
+\textbf{Интегрируемость в среднем квадратическом.}
+
+Случайный процесс $X_t$ называется \emph{интегрируемым в среднем квадратическом}
+на отрезке $[a,b]$, если существует предел
+$
+	\lim_{\max |t_i-t_{i-1}|\to 0}
+	\sum_{i=1}^{n}(t_i-t_{i-1})\,X_{t_i}
+	=
+	\int_a^b X_t\,dt,
+$
+где
+$
+	a=t_0<t_1<t_2<\ldots<t_n=b.
+$
+
+Случайный процесс
+$
+	\int_a^b X_t\,dt
+$
+называется \emph{интегралом в среднем квадратическом}
+случайного процесса $X_t$.
+
+\medskip
+
+Если случайный процесс $X_t$ интегрируем в среднем квадратическом
+на $[a,b]$ и
+$
+	Y_t=\int_a^t X_\tau\,d\tau,
+$
+то выполняются соотношения:
+\begin{enumerate}
+	\item
+	      Математическое ожидание:
+	      $
+		      m_Y(t)=\int_a^t m_X(\tau)\,d\tau,
+		      \qquad \forall\, t\in[a,b].
+	      $
+
+	\item
+	      Корреляционная функция:
+	      $
+		      K_Y(t,s)
+		      =
+		      \int_a^t d\tau
+		      \int_a^s K_X(\tau,\sigma)\,d\sigma,
+		      \qquad \forall\, t,s\in[a,b].
+	      $
+\end{enumerate}
