--- a/exam_questions/eq-21.tex
+++ b/exam_questions/eq-21.tex
@@ -1,5 +1,45 @@
 \subsection*{Вопрос 21}
 
 \begin{condition}
-Линейные преобразования случайных процессов. Нахождение корреляционной функции линейного преобразования.
+	Линейные преобразования случайных процессов. Нахождение корреляционной функции линейного преобразования.
 \end{condition}
+
+\textbf{Линейные преобразования случайных процессов.}
+
+Отображение $L_t$ пространства случайных процессов на $[a,b]$ в себя
+называется \emph{линейным преобразованием}, если для любых процессов
+$X_t$, $Y_t$ и любых чисел $\alpha,\beta$ выполняется равенство
+$
+	L_t[\alpha X_t+\beta Y_t]
+	=
+	\alpha\,L_t[X_t]+\beta\,L_t[Y_t].
+$
+
+\medskip
+
+Пусть
+$
+	\mathbb{E}|X_t|^2<\infty,
+	\qquad
+	Y_t=L_t[X_t]+g(t),
+$
+где $g(t)$ — неслучайная функция.
+Тогда справедливы соотношения:
+
+\begin{enumerate}
+	\item
+	      Математическое ожидание:
+	      $
+		      m_Y(t)=L_t[m_X(t)]+g(t).
+	      $
+
+	\item
+	      Корреляционная функция:
+	      $
+		      K_Y(t,s)
+		      =
+		      L_t\,\overline{L_s}\!\left[K_X(t,s)\right]
+		      =
+		      \overline{L_s}\,L_t\!\left[K_X(t,s)\right].
+	      $
+\end{enumerate}
