--- a/exam_questions/eq-23.tex
+++ b/exam_questions/eq-23.tex
@@ -1,5 +1,40 @@
 \subsection*{Вопрос 23}
 
 \begin{condition}
-Стационарный процесс с дискретным спектром, спектральное разложение корреляционной функции на отрезке.
+	Стационарный процесс с дискретным спектром, спектральное разложение корреляционной функции на отрезке.
 \end{condition}
+
+Если спектральная функция стационарного процесса $\xi_t$ кусочно-постоянна,
+то $\xi_t$ называется стационарным процессом с дискретным спектром.
+
+Спектральное разложение корреляционной функции стационарного процесса
+с дискретным спектром имеет вид
+$
+	K_\xi(\tau)=\sum_{k=0}^{\infty} D_k^*(\xi)\, e^{i\omega_k \tau}.
+$
+
+Спектральное разложение стационарного процесса $\xi_t$:
+$
+	\xi_t = m_\xi + \int_{-\infty}^{+\infty} e^{i\omega t}\,\Phi(d\omega),
+$
+где $\Phi(\Delta)$ называется спектральной стохастической мерой и удовлетворяет
+свойствам:
+\begin{enumerate}
+	\item $M\Phi(\Delta)=0$ для любого отрезка $\Delta$;
+	\item $M\bigl[\Phi(\Delta_1)\Phi(\Delta_2)\bigr]=0$ для любых
+	      непересекающихся отрезков $\Delta_1$ и $\Delta_2$.
+\end{enumerate}
+
+Если $\xi_t$ — стационарный процесс, то имеет место спектральное разложение
+его корреляционной функции
+$
+	K_\xi(\tau)=\int_{-\infty}^{+\infty} e^{i\omega\tau}\, dF_\xi(\omega).
+$
+
+$F_\xi(\omega)$ — спектральная функция стационарного процесса $\xi_t$.
+Она связана со спектральной стохастической мерой $\Phi(\Delta)$
+следующим соотношением:
+$
+	F(b)-F(a)=M\lvert\Phi(\Delta)\rvert^2,
+$
+где $\Delta=(a,b)$.
