--- a/exam_questions/eq-26.tex
+++ b/exam_questions/eq-26.tex
@@ -1,5 +1,76 @@
 \subsection*{Вопрос 26}
 
 \begin{condition}
-Преобразование стационарного процесса с дискретным спектром линейной стационарной динамической системой.
+	Преобразование стационарного процесса с дискретным спектром линейной стационарной динамической системой.
 \end{condition}
+
+\textbf{Стационарные процессы с дискретным спектром}
+
+Если спектральная функция стационарного процесса $\xi_t$ кусочно-постоянна,
+то $\xi_t$ называется стационарным процессом с дискретным спектром.
+
+Спектральное разложение корреляционной функции стационарного процесса
+с дискретным спектром имеет вид
+$
+	K_\xi(\tau)=\sum_{k=0}^{\infty} D_k^*(\xi)\, e^{i\omega_k \tau}.
+$
+
+\medskip
+
+\textbf{Преобразования стационарных процессов}
+
+Стационарный процесс $\eta_t$ является результатом преобразования
+стационарного процесса $\xi_t$ стационарной линейной динамической системой,
+если
+$
+	\sum_{k=0}^{n} a_k \frac{d^k \xi_t}{dt^k}
+	=
+	\sum_{k=0}^{m} b_k \frac{d^k \eta_t}{dt^k},
+$
+где $a_k$, $b_k$ — постоянные коэффициенты.
+
+При этом $\xi_t$ называется входным процессом,
+а $\eta_t$ — выходным процессом.
+
+Для математических ожиданий процессов получаем
+$
+	b_0 m_\eta = a_0 m_\xi,
+	\qquad
+	m_\eta = \frac{a_0}{b_0} m_\xi .
+$
+
+Обозначения:
+$
+	A(p)=\sum_{k=0}^{n} a_k p^k,
+	\qquad
+	B(p)=\sum_{k=0}^{m} b_k p^k .
+$
+
+Многочлены $A(p)$ и $B(p)$ являются характеристическими
+для дифференциальных операторов в левой и правой частях
+уравнения динамической системы.
+
+\medskip
+
+\textbf{Преобразование дискретного спектра}
+
+Если стационарный процесс $\xi_t$ имеет дискретный спектр
+с корреляционной функцией
+$
+	K_\xi(\tau)=\sum_{k=-\infty}^{+\infty} D_k^*(\xi)\, e^{i\omega_k \tau},
+$
+то
+$
+	D_k^*(\eta)=\lvert T(i\omega_k)\rvert^2 D_k^*(\xi).
+$
+
+Корреляционная функция выходного стационарного процесса $\eta_t$
+имеет вид
+$
+	K_\eta(\tau)
+	=\sum_{k=-\infty}^{+\infty}
+	\lvert T(i\omega_k)\rvert^2
+	D_k^*(\xi)\, e^{i\omega_k \tau}.
+$
+
+Следовательно, процесс $\eta_t$ также имеет дискретный спектр.
