--- a/exam_questions/eq-27.tex
+++ b/exam_questions/eq-27.tex
@@ -1,5 +1,69 @@
 \subsection*{Вопрос 27}
 
 \begin{condition}
-Преобразование стационарного процесса с непрерывным спектром линейной стационарной динамической системой.
+	Преобразование стационарного процесса с непрерывным спектром линейной стационарной динамической системой.
 \end{condition}
+
+\textbf{Стационарные процессы с непрерывным спектром}
+
+Стационарный в широком смысле процесс $\xi_t$ называется процессом
+с непрерывным спектром, если его спектральная функция $F_\xi(\omega)$
+дифференцируема:
+$
+	F'_\xi(\omega)=S_\xi^*(\omega).
+$
+
+В этом случае
+$
+	K_\xi(\tau)=\int_{-\infty}^{+\infty} e^{i\omega\tau}\, S_\xi^*(\omega)\, d\omega.
+$
+
+Функция $S_\xi^*(\omega)$ является неотрицательной и называется
+спектральной плотностью стационарного процесса.
+
+\medskip
+
+\textbf{Преобразования стационарных процессов}
+
+Стационарный процесс $\eta_t$ является результатом преобразования
+стационарного процесса $\xi_t$
+стационарной линейной динамической системой, если
+$
+	\sum_{k=0}^{n} a_k \frac{d^k \xi_t}{dt^k}
+	=
+	\sum_{k=0}^{m} b_k \frac{d^k \eta_t}{dt^k},
+$
+где $a_k$, $b_k$ — постоянные коэффициенты.
+
+При этом $\xi_t$ называется входным процессом,
+а $\eta_t$ — выходным процессом.
+
+Для математических ожиданий процессов получаем
+$
+	b_0 m_\eta = a_0 m_\xi,
+	\qquad
+	m_\eta=\frac{a_0}{b_0} m_\xi .
+$
+
+Обозначения:
+$
+	A(p)=\sum_{k=0}^{n} a_k p^k,
+	\qquad
+	B(p)=\sum_{k=0}^{m} b_k p^k .
+$
+
+Многочлены $A(p)$ и $B(p)$ являются характеристическими
+для дифференциальных операторов
+в левой и правой частях уравнения динамической системы.
+
+\medskip
+
+\textbf{Преобразование непрерывного спектра}
+
+Если входной процесс $\xi_t$ имеет непрерывный спектр
+и $S_\xi^*(\omega)$ — его спектральная плотность,
+то $\eta_t$ также является стационарным процессом
+с непрерывным спектром и спектральной плотностью
+$
+	S_\eta^*(\omega)=\lvert T(i\omega)\rvert^2 S_\xi^*(\omega).
+$
