--- a/exam_questions/eq-3.tex
+++ b/exam_questions/eq-3.tex
@@ -1,5 +1,26 @@
 \subsection*{Вопрос 3}
 
 \begin{condition}
-Конечные однородные цепи Маркова. Матрица переходных вероятностей за n шагов. Примеры.
+	Конечные однородные цепи Маркова. Матрица переходных вероятностей за n шагов. Примеры.
 \end{condition}
+
+Если вероятности
+$
+	p_{ij} = P(X_{k+1}=E_j \mid X_k=E_i)
+$
+не зависят от $k$, то цепь Маркова называется \textit{однородной}.
+
+Матрица
+$
+	P(m) = \bigl(p_{ij}(m)\bigr)
+$
+называется матрицей переходных вероятностей за $m$ шагов, где
+$
+	p_{ij}(m) = P(X_{k+m}=E_j \mid X_k=E_i).
+$
+
+При этом выполняются условия
+$
+	0 \le p_{ij}(m) \le 1, \qquad \sum_{j} p_{ij}(m) = 1,
+$
+то есть сумма элементов каждой строки равна единице.
