--- a/exam_questions/eq-4.tex
+++ b/exam_questions/eq-4.tex
@@ -1,5 +1,82 @@
 \subsection*{Вопрос 4}
 
 \begin{condition}
-Стационарное распределение вероятностей конечной однородной цепи Маркова. Его вид для цепи Маркова с двумя состояниями.
+	Стационарное распределение вероятностей конечной однородной цепи Маркова. Его вид для цепи Маркова с двумя состояниями.
 \end{condition}
+
+Последовательность случайных величин $\{X_k\}_{k=0}^{\infty}$ со значениями в
+$S=\{E_1,E_2,\ldots\}$ называется цепью Маркова, если выполняется равенство
+условных вероятностей
+$
+	P\!\left(X_{i_k}=E_{j_k}\mid X_{i_1}=E_{j_1},\ldots,X_{i_{k-1}}=E_{j_{k-1}}\right)
+	=
+	P\!\left(X_{i_k}=E_{j_k}\mid X_{i_{k-1}}=E_{j_{k-1}}\right)
+$
+для произвольных $i_1<i_2<\ldots<i_{k-1}<i_k$, $(k=3,4,\ldots)$ и любых
+$E_{j_1},\ldots,E_{j_k}$.
+
+Если вероятности
+$
+	p_{ij}=P(X_{k+1}=E_j\mid X_k=E_i)
+$
+не зависят от $k$, то цепь Маркова называется однородной. При этом $p_{ij}$
+называются переходными вероятностями, а матрица
+$
+	P=(p_{ij})
+$
+называется матрицей вероятностей перехода за один шаг или переходной матрицей.
+
+\textbf{Определение 1.}
+Распределение $\vec p^{\,*}$ цепи Маркова называется \emph{стационарным},
+если оно остается неизменным на каждом шаге.
+Стационарное распределение $\vec p^{\,*}$ удовлетворяет соотношению
+$
+	\vec p^{\,*}=\vec p^{\,*}P.
+$
+
+\textbf{Определение 2.}
+Если существует предел
+$
+	\lim_{n\to\infty}\vec p(n)=\vec p(\infty)
+$
+и
+$
+	\sum_i p_i(\infty)=1,
+$
+то распределение $\vec p(\infty)$ называется \emph{предельным}.
+
+\medskip
+
+Стационарное распределение $\vec p^{\,*}$ для двусостояльной цепи Маркова
+с матрицей перехода
+$
+	P=
+	\begin{pmatrix}
+		1-a & a   \\
+		b   & 1-b
+	\end{pmatrix},
+	\qquad a+b>0,
+$
+имеет вид
+$
+	\vec p^{\,*}=
+	\left(
+	\frac{b}{a+b},\,
+	\frac{a}{a+b}
+	\right),
+$
+и удовлетворяет условию
+$
+	\vec p^{\,*}P=\vec p^{\,*}.
+$
+
+Если $a=b=0$, то оба состояния являются поглощающими, и стационарных
+распределений бесконечно много: любая выпуклая комбинация $(1,0)$ и $(0,1)$.
+В этом вырожденном случае условие
+$
+	\vec p^{\,*}P=\vec p^{\,*}
+$
+выполняется для любого
+$
+	\vec p^{\,*}=(\alpha,1-\alpha),\qquad \alpha\in[0,1].
+$
