--- a/exam_questions/eq-5.tex
+++ b/exam_questions/eq-5.tex
@@ -1,5 +1,49 @@
 \subsection*{Вопрос 5}
 
 \begin{condition}
-Предельные вероятности. Эргодические цепи Маркова. Теорема Маркова.
+	Предельные вероятности. Эргодические цепи Маркова. Теорема Маркова.
 \end{condition}
+
+Если существует предел
+$
+	\lim_{m\to\infty}\vec p(m)
+	=
+	\lim_{m\to\infty}\vec p(0)\,P^{m}
+	=
+	\vec p(\infty),
+$
+то $\vec p(\infty)$ называется \emph{предельным распределением вероятностей}
+цепи Маркова с начальным распределением $\vec p(0)$.
+
+\medskip
+
+Цепь Маркова с переходной матрицей $P=(p_{ij})$ называется
+\emph{эргодической}, если выполняются условия:
+\begin{enumerate}
+	\item существует предел
+	      $
+		      \lim_{k\to\infty} p_{ij}(k)=q_{ij};
+	      $
+	\item величины $q_{ij}$ не зависят от $i$, то есть
+	      $
+		      q_{ij}=q_j
+	      $
+	      (в матрице $Q=(q_{ij})$ все строки одинаковы);
+	\item
+	      $
+		      q_j>0 \quad \forall j.
+	      $
+\end{enumerate}
+
+\medskip
+
+Теорема (Маркова).
+Если для конечной цепи Маркова с переходной матрицей $P=(p_{ij})$
+существует такое $s$, что
+$
+	p_{ij}(s)>0
+	\quad
+	(\,P(s)=\{p_{ij}(s)\}=P^{\,s}\,),
+	\qquad \forall\, i,j,
+$
+то цепь Маркова является эргодической.
