--- a/exam_questions/eq-6.tex
+++ b/exam_questions/eq-6.tex
@@ -1,5 +1,51 @@
 \subsection*{Вопрос 6}
 
 \begin{condition}
-Классификация состояний цепи Маркова. Существенные и несущественные состояния. Период состояния. Критерий эргодичности цепи Маркова.
+	Классификация состояний цепи Маркова. Существенные и несущественные состояния. Период состояния. Критерий эргодичности цепи Маркова.
 \end{condition}
+
+
+\begin{itemize}
+	\item
+	      Состояние $j$ называется \emph{достижимым} из состояния $i$ $(i\to j)$,
+	      если существует такое $k$, что
+	      $
+		      p_{ij}(k)>0.
+	      $
+
+	\item
+	      Если $i\to j$ и $j\to s$, то $i\to s$.
+
+	\item
+	      Состояния $i$ и $j$ называются \emph{сообщающимися} $(i\leftrightarrow j)$,
+	      если $i\to j$ и $j\to i$.
+
+	\item
+	      Состояние $i$ называется \emph{существенным}, если из $i\to j$ следует
+	      $j\to i$.
+
+	\item
+	      Если $i$ — существенное состояние и $i\to j$, то $j$ также является
+	      существенным.
+	      Действительно, если $i\to j$ и $j\to s$, то $i\to s$.
+	      Так как $i$ существенно, то $s\to i$.
+	      Из $s\to i$ и $i\to j$ следует $s\to j$.
+
+	\item
+	      Если для состояния $i$ существует такое $j$, что $j$ достижимо из $i$,
+	      но $i$ недостижимо из $j$, то состояние $i$ называется \emph{несущественным}.
+
+	\item
+	      Если $i\leftrightarrow j$, то
+	      $
+		      k_i = k_j.
+	      $
+\end{itemize}
+
+\medskip
+
+\textbf{Период состояния.}
+Период состояния $i$ определяется как
+$
+	k_i=\gcd\{\,k:\; p_{ii}(k)>0\,\}.
+$
