--- a/exam_questions/eq-8.tex
+++ b/exam_questions/eq-8.tex
@@ -1,5 +1,78 @@
 \subsection*{Вопрос 8}
 
 \begin{condition}
-Марковский процесс с дискретным множеством состояний и непрерывным временем. Уравнения Колмогорова для вероятностей состояний.
+	Марковский процесс с дискретным множеством состояний и непрерывным временем. Уравнения Колмогорова для вероятностей состояний.
 \end{condition}
+
+Случайный процесс $X_t$, $t\ge 0$, называется \emph{марковским}, если для любого
+целого неотрицательного $m$, любых моментов времени
+$
+	0 \le s_1 < s_2 < \ldots < s_m \le s,\qquad t>0,
+$
+и любого набора состояний
+$
+	E_{i_1},E_{i_2},\ldots,E_{i_m},E_i,E_j
+$
+выполняется равенство
+$
+	P\!\left(
+	X_{s+t}=E_j
+	\mid
+	X_{s_1}=E_{i_1},\ldots,X_{s_m}=E_{i_m},X_s=E_i
+	\right)
+	=
+	P\!\left(X_{s+t}=E_j \mid X_s=E_i\right).
+$
+
+\medskip
+
+\textbf{Система дифференциальных уравнений Колмогорова.}
+
+Пусть $p_i(t)=P(X_t=E_i)$. Тогда
+$
+	\frac{d p_i(t)}{dt}
+	=
+	\sum_j \lambda_{ji} p_j(t)
+	=
+	\lambda_{ii} p_i(t)
+	+
+	\sum_{j\ne i} \lambda_{ji} p_j(t)
+	=
+	\sum_{j\ne i} \lambda_{ji} p_j(t)
+	-
+	p_i(t)\sum_{j\ne i}\lambda_{ij},
+	\qquad i=1,2,\ldots
+$
+
+При этом для всех $t$ выполняется условие нормировки
+$
+	\sum_j p_j(t)=1.
+$
+
+Дифференцируя это равенство по $t$ в точке $t=0$, получаем
+$
+	\sum_j \lambda_{ij}=0,
+	\qquad
+	\lambda_{ii}=-\sum_{j\ne i}\lambda_{ij}.
+$
+
+Вектор вероятностей
+$
+	\vec p(t)=(p_1(t),p_2(t),\ldots)
+$
+удовлетворяет матричному уравнению
+$
+	\vec p\,'(t)
+	=
+	\lim_{\tau\to 0}
+	\frac{\vec p(t+\tau)-\vec p(t)}{\tau}
+	=
+	\lim_{\tau\to 0}
+	\frac{\vec p(t)P(\tau)-\vec p(t)}{\tau}
+	=
+	\vec p(t)\,
+	\lim_{\tau\to 0}
+	\frac{P(\tau)-P(0)}{\tau}
+	=
+	\vec p(t)\Lambda.
+$
