--- a/exam_questions/eq-9.tex
+++ b/exam_questions/eq-9.tex
@@ -1,5 +1,72 @@
 \subsection*{Вопрос 9}
 
 \begin{condition}
-Марковский процесс с дискретным множеством состояний и непрерывным временем. Уравнения для стационарных вероятностей. Эргодичность.
+	Марковский процесс с дискретным множеством состояний и непрерывным временем. Уравнения для стационарных вероятностей. Эргодичность.
 \end{condition}
+
+Случайный процесс $X_t$, $t\ge 0$, называется \emph{марковским}, если для любого
+целого неотрицательного $m$, любых моментов времени
+$
+	0 \le s_1 < s_2 < \ldots < s_m \le s,\qquad t>0,
+$
+и любого набора состояний
+$
+	E_{i_1},E_{i_2},\ldots,E_{i_m},E_i,E_j
+$
+выполняется равенство
+$
+	P\!\left(
+	X_{s+t}=E_j
+	\mid
+	X_{s_1}=E_{i_1},\ldots,X_{s_m}=E_{i_m},X_s=E_i
+	\right)
+	=
+	P\!\left(X_{s+t}=E_j \mid X_s=E_i\right).
+$
+
+\medskip
+
+\textbf{Система линейных алгебраических уравнений для стационарных вероятностей:}
+$
+	\begin{cases}
+		\displaystyle
+		\sum_j \lambda_{ji}\,z_i = 0, \qquad i=1,2,\ldots, \\
+		\displaystyle
+		\sum_j z_j = 1.
+	\end{cases}
+$
+
+\medskip
+
+Цепь Маркова называется \emph{неприводимой}, если
+$
+	S=S(i)\qquad \forall\, i\in S.
+$
+
+\medskip
+
+\textbf{Период состояния.}
+Период состояния $i$ определяется как
+$
+	k_i=\gcd\{\,k:\; p_{ii}(k)>0\,\}.
+$
+
+\medskip
+
+Цепь Маркова называется \emph{апериодической}, если
+$
+	k_i=1 \qquad \forall\, i\in S.
+$
+
+\medskip
+
+Цепь Маркова называется \emph{эргодической}, если она является
+неприводимой и апериодической.
+
+\medskip
+
+Марковский процесс с непрерывным временем
+$
+	\bigl(\vec p(t),\; P(t)\bigr)_{t\ge 0}
+$
+является эргодическим.
