--- a/exam_questions/eq-24.tex
+++ b/exam_questions/eq-24.tex
@@ -1,5 +1,67 @@
 \subsection*{Вопрос 24}
 
 \begin{condition}
-Стационарный процесс с непрерывным спектром, спектральное разложение корреляционной функции на оси.
+	Стационарный процесс с непрерывным спектром, спектральное разложение корреляционной функции на оси.
 \end{condition}
+
+\textbf{Стационарные процессы с непрерывным спектром}
+
+Стационарный в широком смысле процесс $\xi_t$ называется процессом
+с непрерывным спектром, если его спектральная функция $F_\xi(\omega)$
+дифференцируема:
+$
+	F'_\xi(\omega)=S_\xi^*(\omega).
+$
+
+В этом случае
+$
+	K_\xi(\tau)=\int_{-\infty}^{+\infty} e^{i\omega\tau}\, S_\xi^*(\omega)\, d\omega.
+$
+
+Функция $S_\xi^*(\omega)$ является неотрицательной и называется
+спектральной плотностью стационарного процесса.
+
+\medskip
+
+\textbf{Спектральное разложение стационарного процесса} $\xi_t$:
+$
+	\xi_t = m_\xi + \int_{-\infty}^{+\infty} e^{i\omega t}\, \Phi(d\omega),
+$
+где $\Phi(\Delta)$ называется спектральной стохастической мерой и
+удовлетворяет свойствам:
+\begin{enumerate}
+	\item $M\Phi(\Delta)=0$ для любого отрезка $\Delta$;
+	\item $M\bigl[\Phi(\Delta_1)\Phi(\Delta_2)\bigr]=0$ для любых
+	      непересекающихся отрезков $\Delta_1$ и $\Delta_2$.
+\end{enumerate}
+
+Если $\xi_t$ — стационарный процесс, то имеет место спектральное
+разложение его корреляционной функции:
+$
+	K_\xi(\tau)=\int_{-\infty}^{+\infty} e^{i\omega\tau}\, dF_\xi(\omega).
+$
+
+$F_\xi(\omega)$ — спектральная функция стационарного процесса $\xi_t$.
+Она связана со спектральной стохастической мерой $\Phi(\Delta)$
+соотношением:
+$
+	F(b)-F(a)=M\lvert \Phi(\Delta)\rvert^2,
+$
+где $\Delta=(a,b)$.
+
+\medskip
+
+\textbf{Действительнозначный случай.}
+
+В случае действительнозначных стационарных процессов спектральное
+разложение корреляционной функции имеет вид:
+$
+	K_\xi(\tau)=\int_{0}^{+\infty} S_\xi(\omega)\cos(\omega\tau)\, d\omega,
+$
+при этом
+$
+	S_\xi(\omega)=\frac{2}{\pi}\int_{0}^{+\infty} K_\xi(\tau)\cos(\omega\tau)\, d\tau,
+$
+$
+	S_\xi(\omega)=2S_\xi^*(\omega)=2S_\xi^*(-\omega).
+$
