--- a/exam_questions/eq-7.tex
+++ b/exam_questions/eq-7.tex
@@ -1,5 +1,66 @@
 \subsection*{Вопрос 7}
 
 \begin{condition}
-Марковский процесс с дискретным множеством состояний и непрерывным временем. Матрица интенсивностей перехода, её свойства.
+	Марковский процесс с дискретным множеством состояний и непрерывным временем. Матрица интенсивностей перехода, её свойства.
 \end{condition}
+
+Случайный процесс $X_t$, $t\ge 0$, называется \emph{марковским}, если для любого
+целого неотрицательного $m$, любых моментов времени
+$
+	0 \le s_1 < s_2 < \ldots < s_m \le s,\qquad t>0,
+$
+и любого набора состояний
+$
+	E_{i_1},E_{i_2},\ldots,E_{i_m},E_i,E_j
+$
+выполняется равенство
+$
+	P\!\left(X_{s+t}=E_j \mid X_{s_1}=E_{i_1},\ldots,X_{s_m}=E_{i_m},X_s=E_i\right)
+	=
+	P\!\left(X_{s+t}=E_j \mid X_s=E_i\right).
+$
+
+\medskip
+
+Матрица вероятностей перехода за время $t$ определяется как
+$
+	P(t)=\|p_{ij}(t)\|.
+$
+
+Предполагается, что переходные вероятности $p_{ij}(t)$ дифференцируемы в нуле.
+При этом
+$
+	p'_{ij}(0)=\lambda_{ij}, \qquad i\ne j,
+$
+и для малых $t$ справедливы разложения
+$
+	p_{ij}(t)=\lambda_{ij}t+o(t), \qquad i\ne j,
+$
+$
+	p_{ii}(t)=1+\lambda_{ii}t+o(t).
+$
+
+Матрица
+$
+	P'(0)=\Lambda=\|\lambda_{ij}\|
+$
+называется \emph{матрицей интенсивностей} (или плотностей вероятностей) перехода.
+
+\medskip
+
+\textbf{Свойства матрицы интенсивностей перехода:}
+\begin{enumerate}
+	\item
+	      $
+		      \lambda_{ij}\ge 0, \qquad i\ne j;
+	      $
+	\item
+	      $
+		      \lambda_{ii}\le 0;
+	      $
+	\item
+	      $
+		      \sum_j \lambda_{ij}=0, \qquad
+		      \lambda_{ii}=-\sum_{j\ne i}\lambda_{ij}.
+	      $
+\end{enumerate}
